# package_template_example

./: pyproject.toml
src/my_pkg/: dog_class.py  main_module.py  sub_module1.py  sub_module2.py  user_config.yml
src/my_pkg.egg-info/: PKG-INFO  SOURCES.txt
